--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   width: 100vw;
   height: 100vh;
   position: absolute;
+  top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,7 +47,6 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 0px;
-  /* border-radius: 25px; */
 }
 
 .upper-room,
@@ -104,7 +104,6 @@ body {
   border-top-right-radius: 0px;
   box-shadow: -10px 0px 15px 10px #00000033;
 }
-
 
 .token-room1,
 .token-room2,
@@ -193,6 +192,7 @@ body {
 
 .controller {
   position: absolute;
+  top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -236,7 +236,6 @@ body {
   position: relative;
   top: 35px;
   text-shadow: 0px 0px 7.5px black;
-  /* box-shadow: 0px 0px 10px 2px black; */
 }
 
 .center .tri2 a {
@@ -246,7 +245,6 @@ body {
   position: relative;
   bottom: 65px;
   text-shadow: 0px 0px 7.5px black;
-  /* box-shadow: 0px 0px 10px 2px black; */
 }
 
 .center .tri3 a {
@@ -257,7 +255,6 @@ body {
   top: -15px;
   left: 50px;
   text-shadow: 0px 0px 7.5px black;
-  /* box-shadow: 0px 0px 10px 2px black; */
 }
 
 .center .tri4 a {
@@ -268,7 +265,6 @@ body {
   top: -15px;
   right: 50px;
   text-shadow: 0px 0px 7.5px black;
-  /* box-shadow: 0px 0px 10px 2px black; */
 }
 
 .center .tri1 {
@@ -317,6 +313,7 @@ body {
   width: 100vw;
   height: 100vh;
   position: absolute;
+  top: 0px;
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
@@ -369,6 +366,8 @@ body {
   text-shadow: 0px 0px 2px black;
 }
 
+
+
 .hero {
   display: flex;
   flex-direction: row;
@@ -407,6 +406,67 @@ body {
   height: 5px;
   position: relative;
   top: 20px;
+}
+
+.player-info {
+  width: 38px;
+  aspect-ratio: 1;
+  position: absolute;
+  top: 20px;
+  background-color: transparent;
+  box-shadow: inset 0px 0px 10px 5px #00000033;
+  border-radius: 50%;
+  border: none;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-info::before {
+  content: "Player Statistics";
+  position: absolute;
+  top: 0px;
+  width: 240px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: invert(100%);
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 5px #00000033;
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  word-spacing: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: transform ease-in-out 350ms, opacity cubic-bezier(0.5, 0, 0, 0.5) 300ms;
+}
+
+.player-info:hover::before {
+  transform: translateY(-70px);
+  opacity: 1;
+}
+
+.player-info a {
+  font-size: 20px;
+}
+
+#info1 {
+  color: var(--red);
+}
+
+#info2 {
+  color: var(--yellow);
+}
+
+#info3 {
+  color: var(--blue);
+}
+
+#info4 {
+  color: var(--green);
 }
 
 #texts {
@@ -539,7 +599,7 @@ body {
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   transition: all ease-in-out 500ms;
-  z-index: 100;
+  z-index: 5;
 }
 
 @keyframes diceBlinking {
@@ -568,4 +628,49 @@ body {
 
 .pxls a {
   text-shadow: 0px 0px 1.5px black;
+}
+
+/* Winning Pop Up */
+
+.pop-up {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-container {
+  width: 850px;
+  aspect-ratio: 4 / 3;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px 10px #00000033;
+  z-index: 69;
+  display: none;
+}
+
+.cross-x {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  width: 40px;
+  aspect-ratio: 1;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform linear 200ms;
+  display: none;
+}
+
+.cross-x a {
+  font-size: 25px;
+}
+
+.cross-x:hover {
+  transform: scale(1.15) rotateZ(90deg);
 }
