--- a/style.css
+++ b/style.css
@@ -644,6 +644,10 @@ body {
   align-items: center;
 }
 
+.pop-up * {
+  font-family: "Barlow";
+}
+
 #pop-up1 a {
   color: rgba(255, 50, 50, 0.69);
   /* text-shadow: 0px 0px 0px black; */
@@ -723,7 +727,6 @@ body {
   position: absolute;
   top: 20px;
   font-size: 1.75rem;
-  font-family: "Barlow";
   font-weight: 600;
   letter-spacing: 1.5px;
   word-spacing: 12.5px;
@@ -770,7 +773,6 @@ body {
   padding: 5px 30px;
   width: 350px;
   height: 100px;
-  font-family: "Barlow";
   font-size: 1.25rem;
   font-weight: 500;
   display: flex;
@@ -809,5 +811,6 @@ body {
 }
 
 .counter-matrix b {
-  font-size: 50px;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
