--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   --yellow: rgba(255, 255, 0, 0.5);
   --blue: rgba(0, 0, 255, 0.5);
   --green: rgba(0, 255, 0, 0.5);
+
+  --rotate: 0deg;
 }
 
 body {
@@ -237,7 +239,7 @@ body {
   align-items: center;
   position: relative;
   top: 35px;
-  text-shadow: 0px 0px 7.5px black;
+  text-shadow: 0px 0px 2.5px black;
 }
 
 .center .tri2 a {
@@ -246,7 +248,7 @@ body {
   align-items: center;
   position: relative;
   bottom: 65px;
-  text-shadow: 0px 0px 7.5px black;
+  text-shadow: 0px 0px 2.5px black;
 }
 
 .center .tri3 a {
@@ -256,7 +258,7 @@ body {
   position: relative;
   top: -15px;
   left: 50px;
-  text-shadow: 0px 0px 7.5px black;
+  text-shadow: 0px 0px 2.5px black;
 }
 
 .center .tri4 a {
@@ -266,7 +268,7 @@ body {
   position: relative;
   top: -15px;
   right: 50px;
-  text-shadow: 0px 0px 7.5px black;
+  text-shadow: 0px 0px 2.5px black;
 }
 
 .center .tri1 {
@@ -471,7 +473,7 @@ body {
 
 #texts {
   position: relative;
-  top: -70px;
+  top: -90px;
   left: 195px;
   width: 165px;
   text-align: center;
@@ -541,7 +543,7 @@ body {
   width: 360px;
   height: 75px;
   position: relative;
-  top: -25px;
+  top: -60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -587,7 +589,7 @@ body {
 
 .blink a {
   animation-name: diceBlinking;
-  animation-duration: 0.75s;
+  animation-duration: 3s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   transition: all ease-in-out 500ms;
@@ -607,12 +609,36 @@ body {
     transform: scale(1);
   }
 
-  50% {
+  12.5% {
     transform: scale(1.2);
   }
 
-  100% {
+  25% {
     transform: scale(1);
+  }
+
+  37.5% {
+    transform: scale(1.2);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  67.5% {
+    transform: scale(1.2);
+  }
+
+  75% {
+    transform: scale(1);
+  }
+
+  87.5% {
+    transform: rotateZ(180deg) scale(1.2);
+  }
+
+  100% {
+    transform: rotateZ(360deg) scale(1);
   }
 }
 
@@ -631,7 +657,7 @@ body {
 }
 
 .pxls a {
-  text-shadow: 0px 0px 1.5px black;
+  text-shadow: 0px 0px 2.5px black;
 }
 
 /* Winning Pop Up */
@@ -715,7 +741,7 @@ body {
 .info-container hr {
   border: none;
   border: 1.5px solid black;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
   overflow: visible;
   text-align: center;
   width: 90%;
@@ -770,10 +796,10 @@ body {
 }
 
 .stats-matrix {
-  padding: 5px 30px;
+  padding: 5px 25px;
   width: 350px;
   height: 100px;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   font-weight: 500;
   display: flex;
   justify-content: space-between;
